deployments/k8s/grpcserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserver
  namespace: vote-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpcserver
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
      labels:
        app: grpcserver
    spec:
      containers:
        - name: grpcserver
          image: vote-grpcserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 9090
            - name: metrics
              containerPort: 9091
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 15
            periodSeconds: 10
