deployments/k8s/grpcserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcserver
  namespace: vote-system
spec:
  type: ClusterIP
  selector:
    app: grpcserver
  ports:
    - name: grpc
      port: 9090
      targetPort: grpc
    - name: metrics
      port: 9091
      targetPort: metrics
