deployments/k8s/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: vote-system
spec:
  type: NodePort
  selector:
    app: httpserver
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
